Fix alignment of page title and description

--- a/less/main.less
+++ b/less/main.less
@@ -72,6 +72,9 @@ header {
   background-image: url("../images/banner_products.jpg");
   background-repeat: no-repeat;
   background-size: cover;
+  .section-center {
+    margin: auto; 
+  }
   section {
     background-color: @green-rgb;
     padding: 2rem;
